--- a/base/static/base/css/lib_news.scss
+++ b/base/static/base/css/lib_news.scss
@@ -11,6 +11,7 @@ body.libnewsindexpage {
 	}
 	.centermain {
 		max-width: none;
+		padding: 0 30px 0 15px; // needed since news has no .body-container
 	}
 
 
@@ -212,6 +213,14 @@ body.libnewsindexpage {
 	  }
 	}
 
+	.news-category {
+		color: #fff;
+	    display: block;
+	    padding: 0.5em 1em;
+	    background: darken($darkgray, 30%);
+		@include news-category-colors; // located in _variables.scss
+	}
+
 
 /*
  * New Story Page
@@ -272,12 +281,6 @@ body.libnewsindexpage {
 				}
 		    }
 		}
-		.collex-solo, .collex-duo {
-			background: #eee;
-			border-bottom: none;
-			margin-bottom: 1em;
-			border-radius: 15px;
-		}
 		.agenda {
 			@include respond-to(small) {
 			    padding-right: 2rem;
@@ -285,6 +288,87 @@ body.libnewsindexpage {
 		}
 		.media-use {
 			margin-top: 2em;
+		}
+
+		.collexbase {
+		    padding: 2em 1em;
+		    & figure {
+		       @include respond-to(medium) {
+		           display: flex;
+		       }
+		    }
+		}
+
+		.collex-solo {
+		    @extend .collexbase;
+		    border-bottom: 1px dotted $darkgray;
+		    img {
+		        padding-bottom: 1em ;
+		        max-height: 40em;
+		        width: auto;
+		        @include respond-to(medium) {
+		        float: right;
+		            padding-bottom: 0;
+		        }
+
+		    }
+		}
+
+		.collex-solo, .collex-duo, .collex-trio, .collex-verso {
+		    img {
+		        border: 3px solid #c8c8c8;
+		    }
+		    .img-title {
+		        color: $maroon;
+		        font-size: $font-small;
+		        font-weight: 600;
+		    }
+		    .img-citation {
+		        color: $darkgray;
+		        font-size: 0.95em;
+		    }
+		    .img-caption {
+		        color: #000;
+		        font-size: 1em;
+		    }
+		}
+
+
+		.duo-wrapper {
+		    display:flex;
+		    flex-wrap: wrap;
+		    padding: 1em;
+		    border-bottom: 1px dotted $darkgray;
+		}
+
+		.collex-duo {
+		    padding: 0;
+		    text-align: center;
+		    & + & {
+		        border-top: 1px dotted $darkgray;
+		        @include respond-to(small) {
+		            border-top: none;
+		            border-left: 1px dotted $darkgray;
+		            padding-left: 1em;
+		        }
+		    }
+		    figure {
+		        display: inline-block;
+		        text-align: left;
+		        @include respond-to(small) {
+		            max-width: 90%;
+		        }
+		        @include respond-to(medium) {
+		            max-width: 80%;
+		        }
+		    }
+		    img {
+		        margin: 1.5em 1em 1.5em 0;
+		        @include respond-to(medium) {
+		            max-height: 30em;
+		            width: auto;
+		        }
+		    }
 		}
 	}
 	
@@ -355,17 +439,12 @@ body.libnewsindexpage {
  */
 
 	section.related-stories {
-		display: grid;
 		grid-gap: 30px;
 		margin: 0 auto 30px;
 		@include respond-to(small) {
+			display: grid;
 			grid-template-columns: 1fr 1fr 1fr;
 			padding-left: 1.5em;
-		}
-		@include respond-to(small) {
-			article.featured {
-			  grid-column: span 3;
-			}
 		}
 		.img-object {
 			margin-bottom: 1em;
@@ -378,6 +457,11 @@ body.libnewsindexpage {
 		    font-size: 1.3em;
 		    font-weight: 200;
 		    color: $darkgray;
+		}
+		article {
+			@include respond-to(mobileonly) {
+				padding-bottom: 1em;
+			}
 		}
 	 }
 
@@ -403,49 +487,6 @@ body.libnewsindexpage {
 	    font-size: 1.1em;
 		border: none;
 	}
-
-
-/*
- * FOR MOCKS ONLY
- * --------------------------------------------------
- */
-
-.news-category {
-	color: #fff;
-    display: block;
-    padding: 0.5em 1em;
-    background: darken($darkgray, 30%);
-	&.exhibits {
-      background: rgb(37,25,15);
-    }
-    &.spaces {
-      background: rgb(101,109,51);
-    }
-    &.people {
-      background: rgb(153,83,36);
-    }
-    &.research {
-      background: rgb(21,67,95);
-    }
-    &.resources {
-      background: rgb(70,72,51);
-    }
-    &.teaching {
-      background: rgb(21,95,131);
-    }
-    &.events {
-      background: rgb(114,86,99);
-    }
-    &.hours-access {
-      background: rgb(128,0,0);
-    }
-    &.spotlight {
-      background: rgb(198,130,32);
-    }
-    &.from-the-director {
-      background: rgb(143,57,49);
-    }
-}
 
 }
 
